...
                    }
                },
                label = { Text(stringResource(R.string.edit_outfit__main__name__label)) },
                singleLine = true,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("name_input"),
                isError = !isNameValid,
                supportingText = {
                    if (!isNameValid) {
                        Text(stringResource(R.string.edit_outfit__main__name__not_valid))
                    }
                }
...
                                itemIds.toList()
                            )
                        }
                    },
                    enabled = isFormValid,
                    modifier = Modifier
                        .testTag("apply_button")
                ) {
                    Text(
                        text = if (currentOutfit == null)
                            stringResource(R.string.edit_outfit__add_button) else
                            stringResource(R.string.edit_outfit__save_button)
                    )
...
                        },
                        enabled = outfitViewModel
                            .outfitUploadingState !is ApiState.Loading &&
                                outfitViewModel
                                    .outfitDeletingState !is ApiState.Loading,
                        modifier = Modifier
                            .testTag("delete_button")
                    ) {
                        Icon(
                            imageVector = Icons.Default.Delete,
                            contentDescription = null,
                            modifier = Modifier.size(22.dp),
                            tint = MaterialTheme.colorScheme.onErrorContainer
...
                    ),
                    onClick = {
                        outfitViewModel.idOfOutfitToEdit.value = null
                        router.navigateBack()
                    },
                    modifier = Modifier
                        .testTag("cancel_button")
                ) {
                    Text(stringResource(R.string.edit_outfit__cancel_button))
                }
            }

            HorizontalDivider(
...
                    colors = IconButtonDefaults.iconButtonColors(
                        containerColor = MaterialTheme.colorScheme.primary,
                        contentColor = MaterialTheme.colorScheme.onPrimary
                    ),
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("edit_item_list_button"),
                    onClick = {
                        isItemListDialogOpen = true
                    },
                ) {
                    Icon(
                        imageVector = Icons.Filled.Search,
...
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.primary,
                    contentColor = MaterialTheme.colorScheme.onPrimary
                ),
                onClick = onConfirm,
                modifier = Modifier
                    .testTag("select_items_for_outfit_dialog__done_button")
            ) {
                Text(stringResource(R.string.edit_outfit__select_items__done_button))
            }
        },
        modifier = Modifier
            .testTag("select_items_for_outfit_dialog")
...
                onClick?.invoke()
            }
        },
        modifier = modifier
            .fillMaxWidth()
            .padding(vertical = 8.dp)
            .testTag("clothing_item_mini_card"),
    ) {
        Row(
            modifier = Modifier
                .fillMaxWidth()
                .padding(vertical = 8.dp, horizontal = 8.dp)
        ) {
            Checkbox(
                checked = isChecked,
                onCheckedChange = null,
                modifier = Modifier
                    .testTag("clothing_item_mini_card__checkbox")
                    .semantics {
                        this.contentDescription =
                            if (isChecked) "Checked" else "Unchecked"
                    }
            )

            Column(
                modifier = Modifier.padding(start = 8.dp)
            ) {
...
